points-adjustments for block place and break, advancments cleaning and listener fixes

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,3 +13,7 @@ commands:
     description: Zeigt Punktestand an
     permission: smprankpoints.points
     usage: /points [spieler]
+  resetadvancements:
+    description: Reset all advancements for a player
+    usage: /resetadvancements <player>
+    permission: smprankpoints.resetadvancements
